# meia

medical-mcp-main/: package-lock.json  package.json
medical-mcp-main/src/: index.ts
meia_oscar_plugin/: README.md  components.json  package-lock.json  package.json  vite.config.ts
meia_oscar_plugin/public/: manifest.json  pcm-processor.js
meia_oscar_plugin/src/: content.tsx  index.css
meia_oscar_plugin/src/components/: EncounterPanel.tsx  EncounterRecorder.tsx  MeiaPanel.tsx  ProviderPanel.tsx
meia_oscar_plugin/src/hooks/: useAuth.ts  useChatSessions.ts  useEncounterChat.ts  useVoiceInput.ts
meia_oscar_plugin/src/lib/: constants.ts
meia_oscar_plugin/src/test/: ContactHubView.test.tsx  EncounterPanel.test.tsx  EncounterRecorder.test.tsx  NotificationsView.test.tsx  ProviderPanel.test.tsx  (+4 more)
meia_oscar_server/: .gitignore  README.md  appointment_tools.py  call_handler.py  cpsbc_scraper.py  cpsbc_tools.py  demographic_tools.py  document_tools.py  inbox_tools.py  main.py  measurement_tools.py  notes_tools.py  oscar_api_spec.md  oscar_client.py  provider_tools.py  pyproject.toml  rx_tools.py  server.py  start-tunnel.js  store.py  test_appointment_tools.py  test_call_handler.py  test_demographic_tools.py  test_measurement_tools.py  test_provider_tools.py  test_rx_tools.py  test_server.py  tickler_tools.py  tools.py  transcribe.py  util_tools.py  voice.py
meia_oscar_server/tests/: conftest.py  test_contact_hub.py  test_inbox_tools.py  test_measurement_tools.py  test_provider_tools.py  test_server.py  test_store.py  test_tickler_tools.py  test_util_tools.py
(+5 files in other folders)
