[project]
name = "meia-oscar-server"
version = "0.1.0"
description = "Backend server for OSCAR Medical Records System with Google ADK tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34.0",
    "fastapi>=0.115.0",
    "google-adk>=0.1.0",
    "litellm>=1.0.0",
    "pydub>=0.25.0",
    "amazon-transcribe>=0.6.0",
    "requests>=2.31.0",
    "requests-oauthlib>=1.3.1",
    "uvicorn>=0.30.0",
]
